[package]
name = "alloy-core"
version = "0.0.9"
edition = "2021"
license = "MIT"
homepage = "https://github.com/tsar-boomba/alloy"
repository = "https://github.com/tsar-boomba/alloy"
description = "Structs used to build a runtime for alloy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
axum = ["dep:axum", "dep:hyper"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
axum = { version = "0.5.17", optional = true }
hyper = { version = "0.14.23", optional = true }
serde_json = "1.0.87"
tokio = "1.21.2"
lazy_static = "1.4.0"
futures-core = "0.3.25"
