[package]
name = "alloy-core"
version = "0.0.15"
edition = "2021"
license = "MIT"
homepage = "https://github.com/tsar-boomba/alloy"
repository = "https://github.com/tsar-boomba/alloy"
description = "Structs used to build a runtime for alloy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
axum = ["dep:axum", "dep:hyper"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-core = { workspace = true }
once_cell = { workspace = true, features = ["parking_lot"] }
parking_lot = "0.12.1"
bytes = "1.2.1"
