[package]
name = "alloy-runtime"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "alloy_runtime"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
alloy-core = { path = "../alloy-core", features = ["axum"] }
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features = ["full"] }
